flux/apps/lucena-app/k8s/kustomize/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lucena-app
  labels:
    name: lucena-app
    app.kubernetes.io/name: lucena-app
    toolkit.fluxcd.io/tenant: bruno
