flux/apps/lucena-app/k8s/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lucena-app
  namespace: lucena-app
  labels:
    app.kubernetes.io/name: lucena-app
    app.kubernetes.io/instance: lucena-app
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: lucena-app
    app.kubernetes.io/instance: lucena-app
    app.kubernetes.io/component: frontend
